--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>InovaAngular</title>
+  <title>AntenaCPS</title>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <base href="/">
 
