Bg img gradient / ajustes btn termos

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-br" style="background-image: radial-gradient(circle, #00223B, #011D33, #000D20);">
 
 <head>
   <meta charset="utf-8">
